店舗作成エンドポイントのスキーマを追加する
