# app/Http/Controllers/OwnerShopController.php
@@ -28,4 +28,23 @@ class OwnerShopController extends Controller
 
         return OwnerShopResource::collection($owner->ownedShops)->response();
     }
+
+    #[OA\Post(
+        operationId: 'post-owner-shops',
+        path: '/owners/{owner}/shops',
+        tags: ['Owner'],
+        summary: '店舗代表者別店舗登録',
+        description: '店舗代表者が飲食店情報を登録する',
+    )]
+    #[OA\PathParameter(ref: '#/components/parameters/owner-id')]
+    #[OA\RequestBody(ref: '#/components/requestBodies/post-owner-shops')]
+    #[OA\Response(response: 201, ref: '#/components/responses/created')]
+    #[OA\Response(response: 401, ref: '#/components/responses/unauthorized')]
+    #[OA\Response(response: 403, ref: '#/components/responses/forbidden')]
+    #[OA\Response(response: 404, ref: '#/components/responses/not-found')]
+    #[OA\Response(response: 422, ref: '#/components/responses/post-owner-shops-422')]
+    public function store(User $owner): JsonResponse
+    {
+        throw new \Exception('未実装');
+    }
 }
